# word_translation

./: .env  .env.example  .gitignore  README.md  start.ps1  start.sh
backend/: migrate_add_full_html.py  migrate_add_para_type.py  migrate_add_source_html.py  pyproject.toml  requirements.txt  test_translate.py
backend/app/: main.py
backend/app/api/: documents.py  images.py  revisions.py  segments.py  skills.py
backend/app/core/: config.py  errors.py
backend/app/db/: session.py
backend/app/models/: __init__.py  document.py  skill.py
backend/app/providers/: __init__.py  base.py  openai_provider.py
backend/app/schemas/: __init__.py  document.py  skill.py
backend/app/services/: docx_export.py  image_service.py  prompt_builder.py  revision_service.py  segmentation_service.py  skill_service.py  translation_service.py
docs/: api-contract.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AppShell.tsx  DiffView.tsx  ParaBlock.tsx  SegmentList.tsx  SegmentRow.tsx  SelectionHighlighter.tsx  SourceCell.tsx  TargetCell.tsx
frontend/src/features/document/: hooks.ts
frontend/src/features/skills/: hooks.ts
frontend/src/lib/api/: client.ts  documents.ts  revisions.ts  segments.ts  skills.ts
frontend/src/lib/diff/: index.ts
frontend/src/lib/docx/: parseDocx.ts
frontend/src/lib/selection/: index.ts
frontend/src/pages/: DocumentEditorPage.tsx  HomePage.tsx  SkillsPage.tsx
frontend/src/types/: contract.ts
