[project]
name = "ai-translate-backend"
version = "0.1.0"
description = "AI 翻译智能体后端"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sse-starlette>=2.1.0",
    "sqlmodel>=0.0.16",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "openai>=1.25.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
